# ssd-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.example.yml  docker-compose.yml  docker-entrypoint.sh  ecosystem.config.js  pyproject.toml  start.sh
.github/workflows/: docker-image.yml
data/: config.json  settings.json
src/: auth.py  main.py  version.py  version_checker.py
src/integrations/seasonarr/api/: routers.py
src/integrations/seasonarr/clients/: alldebrid_cache_client.py  sonarr_client.py
src/integrations/seasonarr/core/: auth.py  cache.py  websocket_manager.py
src/integrations/seasonarr/db/: database.py  models.py  schemas.py
src/integrations/seasonarr/services/: auto_seasonarr_missing_service.py  bulk_operation_manager.py  season_it_service.py
src/program/: __init__.py  file_watcher.py  json_manager.py  program.py  radarr_cache.py  types.py
src/program/managers/: event_manager.py  sse_manager.py
src/program/settings/: manager.py  models.py  orphans.py
src/program/utils/: __init__.py  discord_notifier.py  imdb.py  logging.py  text_utils.py
src/routers/: __init__.py
src/routers/secure/: alldebrid.py  arrs.py  auth_control.py  backup.py  default.py  docker.py  orphans.py  rename.py  rename_series.py  script.py  settings.py  symlinks.py  update.py
src/services/: fonctions_arrs.py  medias_movies.py  medias_series.py  scan_librairies.py
updater/: auto_update.py
