[tool.poetry]
name = "ssd-api-clean"
version = "0.1.0"
description = "Backend API épuré pour exécution de scripts et gestion JSON"
authors = ["laster13]
readme = "README.md"
packages = [{ include = "program", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.14"
uvicorn = "0.34.3"
pydantic = "2.11.7"
pydantic-core = "2.33.2"
aiofiles = "23.2.1"
loguru = "0.7.3"
python-dotenv = "1.1.1"
scalar-fastapi = "1.0.3"
kink = "0.8.1"
sse-starlette = "2.3.6"
apscheduler = "3.11.0"
rich = "14.0.0"
anyio = "4.9.0"
click = "8.2.1"
colorama = "0.4.6"
h11 = "0.16.0"
idna = "3.10"
typing-extensions = "4.14.0"
typing-inspection = "0.4.1"
annotated-types = "0.7.0"
markdown-it-py = "3.0.0"
mdurl = "0.1.2"
pygments = "2.19.2"
sniffio = "1.3.1"
starlette = "0.37.2"
tzdata = "2025.2"
tzlocal = "5.3.1"
win32-setctime = "1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
